<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c2869"
    android:paddingLeft="?attr/listPreferredItemPaddingLeft"
    android:paddingTop="?attr/listPreferredItemPaddingStart"
    android:paddingRight="?attr/listPreferredItemPaddingRight"
    android:paddingBottom="?attr/listPreferredItemPaddingEnd"
    tools:context=".RecipientsDetails">

    <LinearLayout
        android:id="@+id/topLayoutId"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detNameListId"
            android:text="name"
            android:textSize="30sp"
            android:textColor="#ddecc5"
            android:textStyle="italic"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/detSurnameListId"
            android:text="surname"
            android:textSize="30sp"
            android:textColor="#ddecc5"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/detTitleCellNoListId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLayoutId"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="Cell No.:"
        android:textSize="20sp"
        android:textColor="#ddecc5"
        android:textStyle="bold"
        android:paddingRight="10dp"/>

    <TextView
        android:id="@+id/detCellNoListId"
        android:text="225412336"
        android:textSize="20sp"
        android:textColor="#ddecc5"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/detTitleCellNoListId"
        android:layout_toRightOf="@+id/detTitleCellNoListId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detTitleEmailListId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detTitleCellNoListId"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="Email:"
        android:textSize="20sp"
        android:textColor="#ddecc5"
        android:textStyle="bold"
        android:paddingRight="10dp"/>

    <TextView
        android:id="@+id/detEmailListId"
        android:text="test@gmail.com"
        android:textSize="20sp"
        android:textColor="#ddecc5"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/detTitleEmailListId"
        android:layout_toRightOf="@+id/detTitleEmailListId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detTitleMessageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detTitleEmailListId"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/hint_message"
        android:textSize="20sp"
        android:textColor="#ddecc5"
        android:textStyle="bold"
        android:paddingRight="10dp"/>

    <EditText
        android:id="@+id/detMessageId"
        android:background="#00b2b2"
        android:layout_toRightOf="@+id/detTitleMessageId"
        android:layout_alignBaseline="@+id/detTitleMessageId"
        android:text="@string/message"
        android:textColor="#39220e"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="top"
        android:layout_width="218dp"
        android:layout_height="150dp"/>

<!--    <Button-->
<!--        android:id="@+id/detEditId"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:text="@string/edit"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"/>-->

    <Button
        android:id="@+id/detDelId"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/delete"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>